# backend/routes/product.routes.js
@@ -2,6 +2,8 @@ const router = require("express").Router();
 const { productController } = require("../controllers");
 
 router.post("/add", productController.addProduct);
-router.post("/get", productController.getAllProducts);
+router.get("/get/:id", productController.getProductById);
+router.get("/get", productController.getAllProducts);
+router.delete("/delete", productController.deleteProduct);
 
 module.exports = router;
