# backend/swagger.yaml
@@ -215,7 +215,73 @@ paths:
                     example: Error message detailing the issue.
       tags:
         - User
-components:
+  /product/add:
+    post:
+      summary: Add a new product
+      description: Adds a new product to the system
+      tags:
+        - Product
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Product"
+      responses:
+        "201":
+          description: Product added successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+        "400":
+          description: Bad request or internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  message:
+                    type: string
+                    example: Internal server error
+                  error:
+                    type: string
+                    example: Error message details
+                    /product/get:
+                    get: all products
+                    summary: "Get all products"
+                    description: "Retrieves all products from the system"
+                    tags:
+                      - Product
+                    responses:
+                      "200":
+                        description: "Products retrieved successfully"
+                        content:
+                          application/json:
+                            schema:
+                              type: array
+                              items:
+                                $ref: "#/components/schemas/Product"
+                      "400":
+                        description: "Bad request or internal server error"
+                        content:
+                          application/json:
+                            schema:
+                              type: object
+                              properties:
+                                status:
+                                  type: integer
+                                  example: 400
+                                message:
+                                  type: string
+                                  example: Internal server error
+                                error:
+                                  type: string
+                                  example: Error message details
+                    components:
   schemas:
     User:
       type: "object"
@@ -321,3 +387,74 @@ components:
             refresh:
               type: "string"
               description: "Refresh token for refreshing access tokens."
+    Product:
+      type: object
+      required:
+        - name
+        - brand
+        - category
+        - clothingCategories
+        - color
+        - material
+        - description
+        - images
+        - price
+        - totalStockQuantity
+        - availableStock
+        - stockStatus
+      properties:
+        name:
+          type: string
+        brand:
+          type: string
+        category:
+          type: string
+        size:
+          type: array
+          items:
+            type: string
+        age:
+          type: array
+          items:
+            type: string
+        clothingCategories:
+          type: string
+        color:
+          type: array
+          items:
+            type: string
+        material:
+          type: array
+          items:
+            type: string
+        description:
+          type: string
+        images:
+          type: array
+          items:
+            type: string
+        isFeatured:
+          type: boolean
+        price:
+          type: number
+        discount:
+          type: number
+        discountPrice:
+          type: number
+        discountStart:
+          type: string
+          format: date-time
+        discountEnd:
+          type: string
+          format: date-time
+        tax:
+          type: number
+        totalStockQuantity:
+          type: integer
+        availableStock:
+          type: integer
+        stockStatus:
+          type: string
+          enum:
+            - In Stock
+            - Out of Stock
